--- a/frontend/src/components/Header/LoginModal.css
+++ b/frontend/src/components/Header/LoginModal.css
@@ -37,7 +37,7 @@
   .modal-title {
     margin: 0 0 25px 0;
     font-size: 22px;
-    color: #333;
+    color: #34495e;
     text-align: center;
   }
   
