--- a/frontend/src/pages/SearchResults.css
+++ b/frontend/src/pages/SearchResults.css
@@ -6,8 +6,8 @@
 }
 
 .search-results-container h2 {
-  margin-bottom: 20px;
-  color: #333;
+  margin-bottom: 50px;
+  color: #34495e;
 }
 
 .book-list {
